--- a/index.html
+++ b/index.html
@@ -1,262 +1,275 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tracking Finansial — Cristian & Maharani</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tracking Money — Cristian & Maharani</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
-    *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif}
-    body{background:#f4f7fa;color:#333;min-height:100vh;display:flex;flex-direction:column}
-    header{background:#4A90E2;color:white;text-align:center;padding:1rem;font-size:1.3rem;font-weight:600}
-    nav{display:flex;justify-content:space-around;background:#fff;box-shadow:0 2px 4px rgba(0,0,0,0.1);position:sticky;top:0;z-index:10}
-    nav button{flex:1;padding:1rem;border:none;background:none;font-weight:600;cursor:pointer;transition:0.3s}
-    nav button.active{background:#4A90E2;color:white;border-radius:4px 4px 0 0}
-    main{flex:1;padding:1rem}
-    section{display:none;animation:fadeIn .3s ease}
-    section.active{display:block}
-    @keyframes fadeIn{from{opacity:0}to{opacity:1}}
-    .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(150px,1fr));gap:1rem;margin-bottom:1rem}
-    .card{background:white;padding:1rem;border-radius:10px;box-shadow:0 2px 6px rgba(0,0,0,0.05);text-align:center}
-    .card h4{font-size:0.9rem;color:#777}
-    .card p{font-size:1.2rem;font-weight:600;margin-top:5px}
-    form{background:white;padding:1rem;border-radius:10px;box-shadow:0 2px 6px rgba(0,0,0,0.05);margin-bottom:1rem}
-    form label{display:block;margin-top:0.5rem;font-weight:500}
-    form input,form select{width:100%;padding:0.5rem;margin-top:0.3rem;border:1px solid #ccc;border-radius:6px}
-    form button{margin-top:1rem;padding:0.7rem 1rem;border:none;background:#4A90E2;color:white;border-radius:6px;font-weight:600;cursor:pointer;width:100%}
-    table{width:100%;border-collapse:collapse;background:white;border-radius:10px;overflow:hidden}
-    th,td{padding:0.6rem;text-align:left;border-bottom:1px solid #eee}
-    th{background:#4A90E2;color:white}
-    tr:nth-child(even){background:#f9f9f9}
-    @media(max-width:600px){nav button{font-size:0.8rem;padding:0.7rem}}
+    * { box-sizing: border-box; font-family: 'Poppins', sans-serif; margin: 0; padding: 0; }
+
+    body {
+      background: #121212;
+      color: #e0e0e0;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    header {
+      background: #1e1e1e;
+      padding: 1rem 1.5rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid #333;
+    }
+
+    header h1 { font-size: 1.2rem; font-weight: 600; color: #00bfa6; }
+    header button {
+      background: none; border: none; color: #00bfa6; font-size: 1.3rem; cursor: pointer;
+    }
+
+    nav {
+      display: flex;
+      justify-content: space-around;
+      background: #1e1e1e;
+      border-bottom: 1px solid #333;
+    }
+
+    nav button {
+      flex: 1;
+      background: none;
+      color: #e0e0e0;
+      border: none;
+      padding: 0.8rem;
+      cursor: pointer;
+      transition: 0.2s;
+    }
+
+    nav button.active { border-bottom: 3px solid #00bfa6; color: #00bfa6; }
+
+    main { flex: 1; overflow-y: auto; padding: 1rem; }
+
+    .section {
+      display: none;
+      animation: fadeIn 0.3s ease;
+    }
+    .section.active { display: block; }
+
+    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+
+    .summary {
+      background: #1e1e1e;
+      padding: 1rem;
+      border-radius: 10px;
+      margin-bottom: 1rem;
+      display: grid;
+      gap: 0.5rem;
+    }
+
+    .summary div {
+      display: flex;
+      justify-content: space-between;
+      font-size: 0.9rem;
+      border-bottom: 1px solid #333;
+      padding-bottom: 4px;
+    }
+
+    form {
+      background: #1e1e1e;
+      padding: 1rem;
+      border-radius: 10px;
+      margin-bottom: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+
+    input, select {
+      padding: 0.6rem;
+      border-radius: 8px;
+      border: none;
+      background: #2a2a2a;
+      color: #fff;
+    }
+
+    input::placeholder { color: #aaa; }
+
+    button.submit {
+      background: #00bfa6;
+      border: none;
+      color: #fff;
+      padding: 0.6rem;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: 600;
+      transition: 0.2s;
+    }
+
+    button.submit:hover { background: #00d4bb; }
+
+    .history {
+      background: #1e1e1e;
+      padding: 1rem;
+      border-radius: 10px;
+    }
+
+    .history-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid #333;
+      padding: 6px 0;
+      font-size: 0.9rem;
+    }
+
+    .history-item button {
+      background: none;
+      border: none;
+      color: #ff5252;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+
+    @media (max-width: 768px) {
+      header h1 { font-size: 1rem; }
+      nav button { font-size: 0.8rem; }
+    }
   </style>
 </head>
 <body>
-  <header>Tracking Finansial — Cristian & Maharani</header>
+
+  <header>
+    <h1>Tracking Money</h1>
+    <button id="resetBtn" title="Reset Semua Data">⚙️</button>
+  </header>
+
   <nav>
-    <button class="active" data-tab="penghasilan">Penghasilan</button>
-    <button data-tab="tabungan">Tabungan</button>
-    <button data-tab="pengeluaran">Pengeluaran</button>
-    <button data-tab="hutang">Hutang Aktif</button>
+    <button class="active" data-target="income">Penghasilan</button>
+    <button data-target="saving">Tabungan</button>
+    <button data-target="expense">Pengeluaran</button>
+    <button data-target="debt">Hutang Aktif</button>
   </nav>
 
   <main>
-    <!-- Penghasilan -->
-    <section id="penghasilan" class="active">
-      <div class="cards" id="summaryPenghasilan"></div>
-      <form id="formPenghasilan">
-        <h3>Input Penghasilan</h3>
-        <label>Nama</label>
-        <select id="namaPenghasilan" required>
+    <!-- RINGKASAN -->
+    <div class="summary" id="summary">
+      <div><span>Pemasukan Cristian</span><span id="sumCristian">Rp 0</span></div>
+      <div><span>Pemasukan Maharani</span><span id="sumMaharani">Rp 0</span></div>
+      <div><span>Tabungan Tetap</span><span id="sumTetap">Rp 0</span></div>
+      <div><span>Tabungan Bersama</span><span id="sumBersama">Rp 0</span></div>
+      <div><span>Pengeluaran Bersama</span><span id="sumPengeluaran">Rp 0</span></div>
+    </div>
+
+    <!-- PENGHASILAN -->
+    <section class="section active" id="income">
+      <form id="formIncome">
+        <select id="incomeName">
           <option value="Cristian">Cristian</option>
           <option value="Maharani">Maharani</option>
         </select>
-        <label>Nominal</label>
-        <input type="number" id="nominalPenghasilan" required placeholder="Contoh: 2000000">
-        <label>Keterangan</label>
-        <input type="text" id="ketPenghasilan" placeholder="Misal: Gaji Bulanan">
-        <button type="submit">Tambah Penghasilan</button>
+        <input type="text" id="incomeAmount" placeholder="Nominal (Rp)" />
+        <input type="text" id="incomeNote" placeholder="Keterangan" />
+        <button type="submit" class="submit">Simpan</button>
       </form>
-      <table id="tablePenghasilan">
-        <thead><tr><th>Nama</th><th>Nominal</th><th>Keterangan</th></tr></thead>
-        <tbody></tbody>
-      </table>
+      <div class="history" id="incomeHistory"></div>
     </section>
 
-    <!-- Tabungan -->
-    <section id="tabungan">
-      <div class="cards" id="summaryTabungan"></div>
-      <form id="formTabungan">
-        <h3>Input Tabungan</h3>
-        <label>Jenis Tabungan</label>
-        <select id="jenisTabungan" required>
+    <!-- TABUNGAN -->
+    <section class="section" id="saving">
+      <form id="formSaving">
+        <select id="savingType">
           <option value="Tetap">Tetap</option>
           <option value="Bersama">Bersama</option>
         </select>
-        <div id="namaTabunganContainer">
-          <label>Nama</label>
-          <select id="namaTabungan">
-            <option value="Cristian">Cristian</option>
-            <option value="Maharani">Maharani</option>
-          </select>
-        </div>
-        <label>Nominal</label>
-        <input type="number" id="nominalTabungan" required placeholder="Contoh: 1000000">
-        <button type="submit">Tambah Tabungan</button>
-      </form>
-      <table id="tableTabungan">
-        <thead><tr><th>Jenis</th><th>Nama</th><th>Nominal</th></tr></thead>
-        <tbody></tbody>
-      </table>
-    </section>
-
-    <!-- Pengeluaran -->
-    <section id="pengeluaran">
-      <div class="cards" id="summaryPengeluaran"></div>
-      <form id="formPengeluaran">
-        <h3>Input Pengeluaran</h3>
-        <label>Sumber Dana</label>
-        <select id="sumberPengeluaran" required>
-          <option value="Pemasukan Cristian">Pemasukan Cristian</option>
-          <option value="Pemasukan Maharani">Pemasukan Maharani</option>
-          <option value="Tabungan Bersama">Tabungan Bersama</option>
+        <select id="savingName">
+          <option value="Cristian">Cristian</option>
+          <option value="Maharani">Maharani</option>
         </select>
-        <label>Nominal</label>
-        <input type="number" id="nominalPengeluaran" required placeholder="Contoh: 500000">
-        <button type="submit">Tambah Pengeluaran</button>
+        <input type="text" id="savingAmount" placeholder="Nominal (Rp)" />
+        <button type="submit" class="submit">Simpan</button>
       </form>
-      <table id="tablePengeluaran">
-        <thead><tr><th>Sumber</th><th>Nominal</th></tr></thead>
-        <tbody></tbody>
-      </table>
+      <div class="history" id="savingHistory"></div>
     </section>
 
-    <!-- Hutang -->
-    <section id="hutang">
-      <div class="cards" id="summaryHutang"></div>
-      <form id="formHutang">
-        <h3>Input Hutang Aktif</h3>
-        <label>Nama</label>
-        <select id="namaHutang">
+    <!-- PENGELUARAN -->
+    <section class="section" id="expense">
+      <form id="formExpense">
+        <select id="expenseSource">
+          <option value="Cristian">Pemasukan Cristian</option>
+          <option value="Maharani">Pemasukan Maharani</option>
+          <option value="Bersama">Tabungan Bersama</option>
+        </select>
+        <input type="text" id="expenseAmount" placeholder="Nominal (Rp)" />
+        <button type="submit" class="submit">Simpan</button>
+      </form>
+      <div class="history" id="expenseHistory"></div>
+    </section>
+
+    <!-- HUTANG AKTIF -->
+    <section class="section" id="debt">
+      <form id="formDebt">
+        <select id="debtName">
           <option value="Cristian">Cristian</option>
           <option value="Maharani">Maharani</option>
           <option value="Bersama">Bersama</option>
         </select>
-        <label>Nominal</label>
-        <input type="number" id="nominalHutang" required placeholder="Contoh: 1000000">
-        <label>Jatuh Tempo</label>
-        <input type="date" id="tempoHutang" required>
-        <button type="submit">Tambah Hutang</button>
+        <input type="text" id="debtAmount" placeholder="Nominal (Rp)" />
+        <input type="date" id="debtDate" />
+        <button type="submit" class="submit">Simpan</button>
       </form>
-      <table id="tableHutang">
-        <thead><tr><th>Nama</th><th>Nominal</th><th>Tempo</th></tr></thead>
-        <tbody></tbody>
-      </table>
+      <div class="history" id="debtHistory"></div>
     </section>
   </main>
 
   <script>
-    // === Variabel utama ===
-    const data = JSON.parse(localStorage.getItem("keuangan")) || {
-      penghasilan: [],
-      tabungan: [],
-      pengeluaran: [],
-      hutang: [],
-      summary: {
-        pemasukanCristian: 0,
-        pemasukanMaharani: 0,
-        tabunganTetap: 0,
-        tabunganBersama: 0,
-        pengeluaranBersama: 0
-      }
-    };
-
-    // === Fungsi bantu ===
-    const formatRp = n => "Rp " + n.toLocaleString("id-ID");
-
-    function simpanData() {
-      localStorage.setItem("keuangan", JSON.stringify(data));
-      renderSemua();
-    }
-
-    // === Render Ringkasan ===
-    function renderRingkasan() {
-      const s = data.summary;
-      const html = `
-        <div class="card"><h4>Pemasukan Cristian</h4><p>${formatRp(s.pemasukanCristian)}</p></div>
-        <div class="card"><h4>Pemasukan Maharani</h4><p>${formatRp(s.pemasukanMaharani)}</p></div>
-        <div class="card"><h4>Tabungan Tetap</h4><p>${formatRp(s.tabunganTetap)}</p></div>
-        <div class="card"><h4>Tabungan Bersama</h4><p>${formatRp(s.tabunganBersama)}</p></div>
-        <div class="card"><h4>Pengeluaran Bersama</h4><p>${formatRp(s.pengeluaranBersama)}</p></div>`;
-      document.querySelectorAll("#summaryPenghasilan, #summaryTabungan, #summaryPengeluaran, #summaryHutang").forEach(el=>el.innerHTML=html);
-    }
-
-    // === Penghasilan ===
-    document.getElementById("formPenghasilan").onsubmit = e => {
-      e.preventDefault();
-      const nama = namaPenghasilan.value;
-      const nominal = +nominalPenghasilan.value;
-      const ket = ketPenghasilan.value;
-      data.penghasilan.push({nama, nominal, ket});
-      if(nama=="Cristian") data.summary.pemasukanCristian += nominal;
-      else data.summary.pemasukanMaharani += nominal;
-      simpanData();
-      e.target.reset();
-    };
-
-    // === Tabungan ===
-    jenisTabungan.onchange = () => {
-      namaTabunganContainer.style.display = jenisTabungan.value==="Tetap"?"block":"none";
-    };
-
-    document.getElementById("formTabungan").onsubmit = e => {
-      e.preventDefault();
-      const jenis = jenisTabungan.value;
-      const nama = jenis==="Tetap"?namaTabungan.value:"Bersama";
-      const nominal = +nominalTabungan.value;
-      data.tabungan.push({jenis,nama,nominal});
-      if(jenis==="Tetap"){
-        data.summary.tabunganTetap += nominal;
-        if(nama=="Cristian") data.summary.pemasukanCristian -= nominal;
-        else data.summary.pemasukanMaharani -= nominal;
-      }else{
-        data.summary.tabunganBersama += nominal;
-        data.summary.pemasukanCristian -= nominal/2;
-        data.summary.pemasukanMaharani -= nominal/2;
-      }
-      simpanData();
-      e.target.reset();
-    };
-
-    // === Pengeluaran ===
-    document.getElementById("formPengeluaran").onsubmit = e => {
-      e.preventDefault();
-      const sumber = sumberPengeluaran.value;
-      const nominal = +nominalPengeluaran.value;
-      data.pengeluaran.push({sumber, nominal});
-      if(sumber=="Pemasukan Cristian") data.summary.pemasukanCristian -= nominal;
-      else if(sumber=="Pemasukan Maharani") data.summary.pemasukanMaharani -= nominal;
-      else data.summary.tabunganBersama -= nominal, data.summary.pengeluaranBersama += nominal;
-      simpanData();
-      e.target.reset();
-    };
-
-    // === Hutang ===
-    document.getElementById("formHutang").onsubmit = e => {
-      e.preventDefault();
-      const nama = namaHutang.value;
-      const nominal = +nominalHutang.value;
-      const tempo = tempoHutang.value;
-      data.hutang.push({nama,nominal,tempo});
-      simpanData();
-      e.target.reset();
-    };
-
-    // === Render Tabel ===
-    function renderTable(id, arr, cols){
-      const tbody = document.querySelector(id+" tbody");
-      tbody.innerHTML = arr.map(a=>`<tr>${cols.map(c=>`<td>${c(a)}</td>`).join("")}</tr>`).join("");
-    }
-
-    function renderSemua(){
-      renderRingkasan();
-      renderTable("#tablePenghasilan", data.penghasilan, [a=>a.nama,a=>formatRp(a.nominal),a=>a.ket]);
-      renderTable("#tableTabungan", data.tabungan, [a=>a.jenis,a=>a.nama,a=>formatRp(a.nominal)]);
-      renderTable("#tablePengeluaran", data.pengeluaran, [a=>a.sumber,a=>formatRp(a.nominal)]);
-      renderTable("#tableHutang", data.hutang, [a=>a.nama,a=>formatRp(a.nominal),a=>a.tempo]);
-    }
-
-    // === Navigasi ===
+    // Navigasi
     document.querySelectorAll("nav button").forEach(btn=>{
-      btn.onclick=()=>{
-        document.querySelectorAll("nav button").forEach(b=>b.classList.remove("active"));
+      btn.addEventListener("click", ()=>{
+        document.querySelector("nav button.active").classList.remove("active");
         btn.classList.add("active");
-        document.querySelectorAll("main section").forEach(s=>s.classList.remove("active"));
-        document.getElementById(btn.dataset.tab).classList.add("active");
-      };
+        document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
+        document.getElementById(btn.dataset.target).classList.add("active");
+      });
     });
 
-    renderSemua();
+    // Format ribuan
+    function formatRupiah(angka) {
+      return 'Rp ' + Number(angka || 0).toLocaleString('id-ID');
+    }
+
+    // Reset semua
+    document.getElementById("resetBtn").addEventListener("click", ()=>{
+      if(confirm("Yakin reset semua data?")) {
+        localStorage.clear();
+        location.reload();
+      }
+    });
+
+    // Simpan & tampil data umum
+    const summary = {
+      Cristian: 0, Maharani: 0, Tetap: 0, Bersama: 0, Pengeluaran: 0
+    };
+
+    function updateSummary() {
+      document.getElementById("sumCristian").textContent = formatRupiah(summary.Cristian);
+      document.getElementById("sumMaharani").textContent = formatRupiah(summary.Maharani);
+      document.getElementById("sumTetap").textContent = formatRupiah(summary.Tetap);
+      document.getElementById("sumBersama").textContent = formatRupiah(summary.Bersama);
+      document.getElementById("sumPengeluaran").textContent = formatRupiah(summary.Pengeluaran);
+    }
+
+    updateSummary();
+
+    // Input nominal otomatis format
+    document.querySelectorAll('input[type="text"]').forEach(inp=>{
+      inp.addEventListener("input", ()=>{
+        const clean = inp.value.replace(/[^\d]/g,'');
+        inp.value = clean ? 'Rp ' + Number(clean).toLocaleString('id-ID') : '';
+      });
+    });
   </script>
+
 </body>
 </html>
